--- a/E-commerce.Web/E-commerce.Web.csproj
+++ b/E-commerce.Web/E-commerce.Web.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>E_commerce.Web</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
 </Project>
