configured jwt settings

--- a/E-commerce.Services.AuthAPI/appsettings.json
+++ b/E-commerce.Services.AuthAPI/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=ZAHRAN;Database=E-commerce_Auth;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "ApiSettings": {
+    "JwtOptions": {
+      "Secret": "A ninja must always be prepared",
+      "Issuer": "e-commerce-auth-api",
+      "Audience": "e-commerce-client"
+    }
   }
 }
