--- a/E-commerce.Services.AuthAPI/appsettings.json
+++ b/E-commerce.Services.AuthAPI/appsettings.json
@@ -11,7 +11,7 @@
   },
   "ApiSettings": {
     "JwtOptions": {
-      "Secret": "A ninja must always be prepared",
+      "Secret": "A ninja must always be prepared Scooby Dooby Doo VROOM VROOM Pumpkin Muncher",
       "Issuer": "e-commerce-auth-api",
       "Audience": "e-commerce-client"
     }
