--- a/E-commerce.Services.CouponAPI/appsettings.json
+++ b/E-commerce.Services.CouponAPI/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=ZAHRAN;Database=E-commerce_Coupon;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "ApiSettings": {
+    "Secret": "A ninja must always be prepared Scooby Dooby Doo VROOM VROOM Pumpkin Muncher",
+    "Issuer": "e-commerce-auth-api",
+    "Audience": "e-commerce-client"
   }
+
 }
