set up DbContext and seeded Product table

--- a/E-commerce.Services.ProductAPI/appsettings.json
+++ b/E-commerce.Services.ProductAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=ZAHRAN;Database=E-commerce_Product;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
