--- a/E-commerce.Services.ProductAPI/appsettings.json
+++ b/E-commerce.Services.ProductAPI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=ZAHRAN;Database=E-commerce_Product;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "ApiSettings": {
+    "Secret": "A ninja must always be prepared Scooby Dooby Doo VROOM VROOM Pumpkin Muncher",
+    "Issuer": "e-commerce-auth-api",
+    "Audience": "e-commerce-client"
   }
 }
