--- a/E-commerce.Web/E-commerce.Web.csproj
+++ b/E-commerce.Web/E-commerce.Web.csproj
@@ -12,4 +12,12 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.6.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Home\ProductDetails.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Home\ProductDetails.cshtml" />
+  </ItemGroup>
+
 </Project>
