completed initial setup for ShoppingCartAPI

--- a/E-commerce.Services.ShoppingCartAPI/appsettings.json
+++ b/E-commerce.Services.ShoppingCartAPI/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=ZAHRAN;Database=E-commerce_ShoppingCart;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "ApiSettings": {
+    "Secret": "A ninja must always be prepared Scooby Dooby Doo VROOM VROOM Pumpkin Muncher",
+    "Issuer": "e-commerce-auth-api",
+    "Audience": "e-commerce-client"
+  }
 }
