--- a/E-commerce.Services.ShoppingCartAPI/appsettings.json
+++ b/E-commerce.Services.ShoppingCartAPI/appsettings.json
@@ -13,5 +13,8 @@
     "Secret": "A ninja must always be prepared Scooby Dooby Doo VROOM VROOM Pumpkin Muncher",
     "Issuer": "e-commerce-auth-api",
     "Audience": "e-commerce-client"
+  },
+  "ServiceUrls": {
+    "ProductAPI": "https://localhost:7000"
   }
 }
