--- a/Ecommerce.MessageBus/Ecommerce.MessageBus.csproj
+++ b/Ecommerce.MessageBus/Ecommerce.MessageBus.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.19.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
