added service bus consumer

--- a/Ecommerce.Services.EmailAPI/appsettings.json
+++ b/Ecommerce.Services.EmailAPI/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=ZAHRAN;Database=E-commerce_Email;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "ServiceBusConnectionString": "<Primary connection string>",
+  "TopicAndQueueNames": {
+    "EmailShoppingCartQueue": "emailshoppingcart"
   }
 }
