configured AzureServiceBusConsumer and implemented email service to log emails

--- a/Ecommerce.Services.EmailAPI/Ecommerce.Services.EmailAPI.csproj
+++ b/Ecommerce.Services.EmailAPI/Ecommerce.Services.EmailAPI.csproj
@@ -24,4 +24,6 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
+
 </Project>
