log new user registration

--- a/E-commerce.Services.AuthAPI/appsettings.json
+++ b/E-commerce.Services.AuthAPI/appsettings.json
@@ -15,5 +15,8 @@
       "Issuer": "e-commerce-auth-api",
       "Audience": "e-commerce-client"
     }
+  },
+  "TopicAndQueueNames": {
+    "LogUserQueue": "loguser"
   }
 }
