--- a/Ecommerce.Services.EmailAPI/appsettings.json
+++ b/Ecommerce.Services.EmailAPI/appsettings.json
@@ -11,6 +11,7 @@
   },
   "ServiceBusConnectionString": "<Primary connection string>",
   "TopicAndQueueNames": {
-    "EmailShoppingCartQueue": "emailshoppingcart"
+    "EmailShoppingCartQueue": "emailshoppingcart",
+    "LogUserQueue": "loguser"
   }
 }
