--- a/Ecommerce.Services.EmailAPI/appsettings.json
+++ b/Ecommerce.Services.EmailAPI/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ZAHRAN;Database=E-commerce_Email;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": ""
   },
-  "ServiceBusConnectionString": "<Primary connection string>",
+  "ServiceBusConnectionString": "",
   "TopicAndQueueNames": {
     "EmailShoppingCartQueue": "emailshoppingcart",
     "LogUserQueue": "loguser"
