--- a/E-commerce.Services.AuthAPI/appsettings.json
+++ b/E-commerce.Services.AuthAPI/appsettings.json
@@ -7,11 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ZAHRAN;Database=E-commerce_Auth;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": ""
   },
   "ApiSettings": {
     "JwtOptions": {
-      "Secret": "A ninja must always be prepared Scooby Dooby Doo VROOM VROOM Pumpkin Muncher",
+      "Secret": "",
       "Issuer": "e-commerce-auth-api",
       "Audience": "e-commerce-client"
     }
