--- a/E-commerce.Services.ShoppingCartAPI/E-commerce.Services.ShoppingCartAPI.csproj
+++ b/E-commerce.Services.ShoppingCartAPI/E-commerce.Services.ShoppingCartAPI.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>E_commerce.Services.ShoppingCartAPI</RootNamespace>
+    <UserSecretsId>a679ae1b-0773-4874-8996-637e6e8f330d</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
