--- a/E-commerce.Services.ShoppingCartAPI/appsettings.json
+++ b/E-commerce.Services.ShoppingCartAPI/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ZAHRAN;Database=E-commerce_ShoppingCart;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": ""
   },
   "ApiSettings": {
-    "Secret": "A ninja must always be prepared Scooby Dooby Doo VROOM VROOM Pumpkin Muncher",
+    "Secret": "",
     "Issuer": "e-commerce-auth-api",
     "Audience": "e-commerce-client"
   },
