--- a/Ecommerce.Services.EmailAPI/Ecommerce.Services.EmailAPI.csproj
+++ b/Ecommerce.Services.EmailAPI/Ecommerce.Services.EmailAPI.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>ce8e76a6-701a-4140-b7f4-727fec139fc1</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
