--- a/E-commerce.Services.ProductAPI/Dockerfile
+++ b/E-commerce.Services.ProductAPI/Dockerfile
@@ -4,6 +4,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 EXPOSE 8080
 ENV ASPNETCORE_URLS=http://+:8080
+ENV ASPNETCORE_ENVIRONMENT=Production
 
 # Stage 2: Build environment (SDK 8.0 for compilation)
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
