--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,247 @@
-# Azure Service Bus Connection String
-# Get this from your User Secrets or Azure Portal → Service Bus → Shared access policies
-# Format: Endpoint=sb://your-namespace.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=your-key-here
-AZURE_SERVICEBUS_CONNECTION=Endpoint=sb://ecommerceweb.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=YOUR_KEY_HERE
+# ============================================================================
+# E-commerce Microservices - Environment Variables Template
+# ============================================================================
+# This file contains all environment variables needed for local development
+# and Docker container deployment.
+#
+# SETUP INSTRUCTIONS:
+# 1. Copy this file: cp .env.example .env
+# 2. Replace all placeholders (YOUR_*_HERE) with actual values
+# 3. Never commit .env to Git (it's already in .gitignore)
+# 4. For Azure deployment, these values are configured in Azure Portal
+#    Container Apps → Environment variables section
+#
+# LOCAL DEVELOPMENT vs PRODUCTION:
+# - Local: These values are injected by docker-compose from the .env file
+# - Azure: Values are configured directly in Container Apps environment
+# ============================================================================
 
-# JWT Secret (same as from Phase 1 User Secrets)
-# Must be at least 32 characters long for security
-# Generate with: openssl rand -base64 64 (or use your existing secret from Phase 1)
-JWT_SECRET=local-dev-secret-min-32-chars-abcdefghijklmnopqrstuvwxyz123456
+# ============================================================================
+# SECTION 1: AZURE RESOURCES
+# ============================================================================
+# Azure Resource Group and basic configuration
+RESOURCE_GROUP=Ecommerce-Project
+AZURE_SUBSCRIPTION_ID=YOUR_SUBSCRIPTION_ID_HERE
+AZURE_REGION=eastus
 
-# Instructions:
-# 1. Copy this file to .env: cp .env.example .env
-# 2. Replace placeholder values with your actual secrets from User Secrets
-# 3. Never commit .env file to Git (it's in .gitignore)
+# ============================================================================
+# SECTION 2: CONTAINER REGISTRY (ACR)
+# ============================================================================
+# Azure Container Registry credentials for pulling Docker images
+# Get these from: Azure Portal → Container Registries → ecommerceacr → Access Keys
+ACR_NAME=ecommerceacr
+ACR_LOGIN_SERVER=ecommerceacr.azurecr.io
+ACR_USERNAME=ecommerceacr
+ACR_PASSWORD=YOUR_ACR_PASSWORD_HERE
+ACR_LOGIN_TOKEN=YOUR_ACR_LOGIN_TOKEN_HERE
+
+# ============================================================================
+# SECTION 3: SQL SERVER
+# ============================================================================
+# Azure SQL Server connection details
+# Get Server Name from: Azure Portal → SQL Servers → ecommerce-sql-server-prod
+SQL_SERVER=tcp:ecommerce-sql-server-prod.database.windows.net,1433
+SQL_ADMIN_USERNAME=sqladmin
+SQL_ADMIN_PASSWORD=YOUR_SQL_ADMIN_PASSWORD_HERE
+
+# ============================================================================
+# SECTION 4: DATABASE CONNECTION STRINGS
+# ============================================================================
+# Format: Server=tcp:SERVER.database.windows.net,1433;Initial Catalog=DATABASE;
+#         Persist Security Info=False;User ID=USERNAME;Password=PASSWORD;
+#         MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;
+#         Connection Timeout=30;
+
+# AuthAPI Database
+AUTH_SQL_CONNECTION=Server=tcp:ecommerce-sql-server-prod.database.windows.net,1433;Initial Catalog=ecommerce-auth;Persist Security Info=False;User ID=sqladmin;Password=YOUR_SQL_ADMIN_PASSWORD_HERE;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;
+
+# ProductAPI Database
+PRODUCT_SQL_CONNECTION=Server=tcp:ecommerce-sql-server-prod.database.windows.net,1433;Initial Catalog=ecommerce-product;Persist Security Info=False;User ID=sqladmin;Password=YOUR_SQL_ADMIN_PASSWORD_HERE;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;
+
+# CouponAPI Database
+COUPON_SQL_CONNECTION=Server=tcp:ecommerce-sql-server-prod.database.windows.net,1433;Initial Catalog=ecommerce-coupon;Persist Security Info=False;User ID=sqladmin;Password=YOUR_SQL_ADMIN_PASSWORD_HERE;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;
+
+# ShoppingCartAPI Database
+SHOPPINGCART_SQL_CONNECTION=Server=tcp:ecommerce-sql-server-prod.database.windows.net,1433;Initial Catalog=ecommerce-cart;Persist Security Info=False;User ID=sqladmin;Password=YOUR_SQL_ADMIN_PASSWORD_HERE;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;
+
+# EmailAPI Database
+EMAIL_SQL_CONNECTION=Server=tcp:ecommerce-sql-server-prod.database.windows.net,1433;Initial Catalog=ecommerce-email;Persist Security Info=False;User ID=sqladmin;Password=YOUR_SQL_ADMIN_PASSWORD_HERE;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;
+
+# ============================================================================
+# SECTION 5: AZURE SERVICE BUS
+# ============================================================================
+# Service Bus connection string for messaging between services
+# Get this from: Azure Portal → Service Bus → ecommerceweb → Shared access policies
+# → RootManageSharedAccessKey → Connection string-primary key
+# Format: Endpoint=sb://NAMESPACE.servicebus.windows.net/;
+#         SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=KEY
+AZURE_SERVICEBUS_CONNECTION=Endpoint=sb://ecommerceweb.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=YOUR_SERVICE_BUS_KEY_HERE
+
+# Service Bus Queue Names
+EMAILSHOPPINGCART_QUEUE=emailshoppingcart
+LOGUSER_QUEUE=loguser
+
+# ============================================================================
+# SECTION 6: JWT AUTHENTICATION
+# ============================================================================
+# JWT Secret for signing tokens - must match across all services
+# Generate with: openssl rand -base64 64
+# Minimum 32 characters for security, but 64 bytes (base64) recommended
+JWT_SECRET=YOUR_JWT_SECRET_HERE_MIN_64_CHARS_GENERATED_BY_OPENSSL_RAND_BASE64_64
+
+# JWT token configuration
+JWT_ISSUER=e-commerce-auth-api
+JWT_AUDIENCE=e-commerce-client
+JWT_EXPIRY_DAYS=7
+
+# ============================================================================
+# SECTION 7: MICROSERVICE URLS
+# ============================================================================
+# Service-to-service communication URLs
+# LOCAL DEVELOPMENT: Use localhost with specific ports
+# AZURE CONTAINER APPS: Use service names as hostnames (internal DNS)
+
+# Local Development URLs (used in docker-compose)
+PRODUCTAPI_URL=http://localhost:7000
+COUPONAPI_URL=http://localhost:7001
+AUTHAPI_URL=http://localhost:7002
+SHOPPINGCARTAPI_URL=http://localhost:7003
+EMAILAPI_URL=http://localhost:7298
+WEB_URL=http://localhost:7230
+
+# Azure Container Apps URLs (internal service-to-service)
+# Note: Services communicate via short names within the Container Apps environment
+# Example: http://productapi instead of full URL
+PRODUCTAPI_URL_AZURE=http://productapi
+COUPONAPI_URL_AZURE=http://couponapi
+AUTHAPI_URL_AZURE=http://authapi
+SHOPPINGCARTAPI_URL_AZURE=http://shoppingcartapi
+EMAILAPI_URL_AZURE=http://emailapi
+WEB_URL_AZURE=http://web
+
+# ============================================================================
+# SECTION 8: DOCKER & CONTAINER APPS
+# ============================================================================
+# Docker image configuration
+DOCKER_IMAGE_PREFIX=ecommerceacr.azurecr.io
+DOCKER_IMAGE_TAG=latest
+
+# Container Apps environment
+CONTAINER_APPS_ENVIRONMENT=ecommerce-env
+CONTAINER_APPS_RESOURCE_GROUP=Ecommerce-Project
+
+# ============================================================================
+# SECTION 9: ASPNETCORE CONFIGURATION
+# ============================================================================
+# ASP.NET Core environment
+# LOCAL: Development (enables auto-migrations, detailed error pages)
+# AZURE: Production (disables auto-migrations, error pages)
+ASPNETCORE_ENVIRONMENT=Development
+
+# ASPNETCORE URLs
+ASPNETCORE_URLS=http://+:8080
+ASPNETCORE_HTTP_PORT=8080
+ASPNETCORE_HTTPS_PORT=8443
+
+# ============================================================================
+# SECTION 10: LOGGING & MONITORING
+# ============================================================================
+# Application logging configuration
+LOG_LEVEL=Information
+LOGGING_LOGLEVEL_DEFAULT=Information
+LOGGING_LOGLEVEL_MICROSOFT=Warning
+LOGGING_LOGLEVEL_MICROSOFT_ENTITYFRAMEWORKCORE=Information
+
+# Application Insights (optional - for monitoring)
+APPINSIGHTS_INSTRUMENTATIONKEY=YOUR_APPINSIGHTS_KEY_HERE
+APPINSIGHTS_ENABLED=false
+
+# ============================================================================
+# REFERENCES & WHERE TO FIND VALUES
+# ============================================================================
+#
+# Azure Portal Locations:
+#   - Resource Group: https://portal.azure.com → Resource groups → Ecommerce-Project
+#   - Container Registry: https://portal.azure.com → Container registries → ecommerceacr
+#     Access Keys tab for username, password, and login server
+#   - SQL Server: https://portal.azure.com → SQL servers → ecommerce-sql-server-prod
+#     Connection strings: Databases → [each database] → Connection strings → ADO.NET
+#   - Service Bus: https://portal.azure.com → Service Bus namespaces → ecommerceweb
+#     Shared access policies → RootManageSharedAccessKey → Connection string-primary
+#   - Container Apps: https://portal.azure.com → Container Apps → [each app]
+#     Environment variables tab to view current configuration
+#
+# JWT Secret:
+#   - Can reuse from Phase 1 User Secrets (if available)
+#   - Or generate new: openssl rand -base64 64
+#   - Must be identical across all services
+#
+# Connection Strings:
+#   - Copy from Azure Portal exactly as shown
+#   - Replace {your_password} with SQL_ADMIN_PASSWORD
+#   - Test locally: dotnet user-secrets set ConnectionStrings:DefaultConnection "[string]"
+#
+# Service URLs:
+#   - For local docker-compose: Use http://SERVICE_NAME (docker-compose DNS)
+#   - For Azure Container Apps: Use http://SERVICE_NAME (internal DNS)
+#   - External access: Use Container Apps ingress URL from Portal
+#
+# ============================================================================
+# SECURITY BEST PRACTICES
+# ============================================================================
+#
+# 1. NEVER commit this file with actual values to Git
+#    - .env file should only contain placeholders
+#    - Keep actual .env file locally and in secure vaults
+#
+# 2. For Production (Azure):
+#    - Use Azure Key Vault instead of environment variables for secrets
+#    - Implement Managed Identity for Service Bus instead of connection strings
+#    - Never expose these values in Container Apps settings if avoidable
+#
+# 3. Local Development:
+#    - Store secrets in User Secrets instead of .env for added security
+#    - Use: dotnet user-secrets set KEY VALUE
+#    - .env is only for docker-compose convenience
+#
+# 4. Rotation:
+#    - Change SQL_ADMIN_PASSWORD regularly
+#    - Rotate ACR passwords in Azure Portal
+#    - Update JWT_SECRET when compromised
+#
+# 5. Access Control:
+#    - Limit who can view this file
+#    - Use role-based access in Azure
+#    - Monitor access via Azure Activity Log
+#
+# ============================================================================
+# TROUBLESHOOTING
+# ============================================================================
+#
+# Q: Services can't connect to SQL Server
+# A: Check connection string format matches Azure Portal exactly
+#    - Verify SQL_ADMIN_PASSWORD is correct
+#    - Ensure your IP is added to SQL Server firewall rules
+#    - Test: sqlcmd -S SERVER -U USERNAME -P PASSWORD
+#
+# Q: Service Bus messages not being consumed
+# A: Verify AZURE_SERVICEBUS_CONNECTION has correct key
+#    - Check queue names match appsettings.json (emailshoppingcart, loguser)
+#    - Ensure EmailAPI has access to Service Bus
+#    - Test: dotnet user-secrets set ServiceBusConnectionString "[connection]"
+#
+# Q: Docker containers fail to start
+# A: Check ASPNETCORE_ENVIRONMENT matches Dockerfile setting
+#    - Verify all connection strings are set in docker-compose
+#    - Check Docker logs: docker-compose logs SERVICE_NAME
+#    - Ensure .env file exists and is in correct directory
+#
+# Q: JWT authentication fails
+# A: Verify JWT_SECRET is identical across all services
+#    - Check JWT_ISSUER and JWT_AUDIENCE match in all services
+#    - Test token generation: AuthAPI /auth/login endpoint
+#
+# ============================================================================
+# LAST UPDATED: 2025-11-17
+# PHASE: 4.3 - Database Migrations & Docker Setup
+# ============================================================================
