install curl in dockerfile

--- a/E-commerce.Services.ShoppingCartAPI/Dockerfile
+++ b/E-commerce.Services.ShoppingCartAPI/Dockerfile
@@ -23,6 +23,7 @@ RUN dotnet publish "E-commerce.Services.ShoppingCartAPI.csproj" -c Release -o /a
 
 FROM base AS final
 WORKDIR /app
+RUN apt-get update && apt-get install -y --no-install-recommends curl && rm -rf /var/lib/apt/lists/*
 COPY --from=publish /app/publish .
 
 HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
