--- a/E-commerce.Services.CouponAPI/Dockerfile
+++ b/E-commerce.Services.CouponAPI/Dockerfile
@@ -22,6 +22,7 @@ RUN dotnet publish "E-commerce.Services.CouponAPI.csproj" -c Release -o /app/pub
 
 FROM base AS final
 WORKDIR /app
+RUN apt-get update && apt-get install -y --no-install-recommends curl && rm -rf /var/lib/apt/lists/*
 COPY --from=publish /app/publish .
 
 HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
