warm up service setup

--- a/E-commerce.Web/appsettings.json
+++ b/E-commerce.Web/appsettings.json
@@ -2,7 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "E_commerce.Web.Services.DatabaseWarmUpHostedService": "Information"
     }
   },
   "AllowedHosts": "*",
@@ -11,5 +12,42 @@
     "AuthAPI": "https://localhost:7002",
     "ProductAPI": "https://localhost:7000",
     "ShoppingCartAPI": "https://localhost:7003"
+  },
+  "DatabaseWarmUp": {
+    "Enabled": true,
+    "Services": [
+      {
+        "Name": "ProductAPI",
+        "BaseUrl": "https://localhost:7000",
+        "HealthEndpoint": "/health",
+        "TimeoutMs": 45000,
+        "MaxRetries": 3,
+        "RetryDelayMs": 2000
+      },
+      {
+        "Name": "CouponAPI",
+        "BaseUrl": "https://localhost:7001",
+        "HealthEndpoint": "/health",
+        "TimeoutMs": 45000,
+        "MaxRetries": 3,
+        "RetryDelayMs": 2000
+      },
+      {
+        "Name": "AuthAPI",
+        "BaseUrl": "https://localhost:7002",
+        "HealthEndpoint": "/health",
+        "TimeoutMs": 45000,
+        "MaxRetries": 3,
+        "RetryDelayMs": 2000
+      },
+      {
+        "Name": "ShoppingCartAPI",
+        "BaseUrl": "https://localhost:7003",
+        "HealthEndpoint": "/health",
+        "TimeoutMs": 45000,
+        "MaxRetries": 3,
+        "RetryDelayMs": 2000
+      }
+    ]
   }
 }
