added prod appsettings

--- a/.gitignore
+++ b/.gitignore
@@ -372,6 +372,7 @@ appsettings.Production.json
 appsettings.*.json
 !appsettings.json
 !appsettings.Development.json
+!appsettings.Production.json
 
 # Docker environment variables (contains secrets)
 .env
