--- a/Ecommerce.Services.EmailAPI/Ecommerce.Services.EmailAPI.csproj
+++ b/Ecommerce.Services.EmailAPI/Ecommerce.Services.EmailAPI.csproj
@@ -25,6 +25,10 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\E-commerce.Shared\E-commerce.Shared.csproj" />
+  </ItemGroup>
+
   <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
