--- a/E-commerce.Web/E-commerce.Web.csproj
+++ b/E-commerce.Web/E-commerce.Web.csproj
@@ -20,4 +20,8 @@
     <_ContentIncludedByDefault Remove="Views\Home\ProductDetails.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\E-commerce.Shared\E-commerce.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
