jaeger code changes

--- a/E-commerce.Services.AuthAPI/appsettings.json
+++ b/E-commerce.Services.AuthAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Jaeger": {
+    "AgentHost": "localhost",
+    "AgentPort": 6831
+  },
   "Serilog": {
     "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq"],
     "MinimumLevel": {
