--- a/Ecommerce.Services.EmailAPI/appsettings.json
+++ b/Ecommerce.Services.EmailAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Jaeger": {
+    "AgentHost": "localhost",
+    "AgentPort": 6831
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
