update product service support

--- a/E-commerce.Services.ProductAPI/appsettings.json
+++ b/E-commerce.Services.ProductAPI/appsettings.json
@@ -47,5 +47,11 @@
     "Secret": "",
     "Issuer": "e-commerce-auth-api",
     "Audience": "e-commerce-client"
+  },
+  "CacheSettings": {
+    "Enabled": true,
+    "RedisConnection": "localhost:6379",
+    "DefaultCacheDuration": 3600,
+    "SlidingExpiration": true
   }
 }
