--- a/E-commerce.Services.ProductAPI/E-commerce.Services.ProductAPI.csproj
+++ b/E-commerce.Services.ProductAPI/E-commerce.Services.ProductAPI.csproj
@@ -17,12 +17,14 @@
 		<PrivateAssets>all</PrivateAssets>
 		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
+	<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="10.0.1" />
 	<PackageReference Include="Serilog.AspNetCore" Version="10.0.0" />
 	<PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
 	<PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
 	<PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
 	<PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
 	<PackageReference Include="Serilog.Sinks.Seq" Version="9.0.0" />
+	<PackageReference Include="StackExchange.Redis" Version="2.10.1" />
 	<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
